factionsButtons fix on mobile

--- a/src/components/map/mapButtons.scss
+++ b/src/components/map/mapButtons.scss
@@ -43,7 +43,7 @@
 #factionsButton {
     display: none;
     position: absolute;
-    bottom: 0;
+    bottom: env(safe-area-inset-bottom, 0);
     left: 0;
     right: 0;
     width: fit-content;
